--- a/src/app.html
+++ b/src/app.html
@@ -5,10 +5,102 @@
 	<meta charset="utf-8" />
 	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+	<!-- Fonts -->
 	<link
 		href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Manrope:wght@300;400;500;600;700;800&display=swap"
 		rel="stylesheet">
-	<title>Фотосессия, в которой ты чувствуешь себя собой</title>
+
+	<!-- Primary Meta Tags -->
+	<meta name="title" content="Фотосессия, в которой ты чувствуешь себя собой | Настя Свободина">
+	<meta name="description"
+		content="Фотограф честных портретов в Челябинске. Без глянца, без давления, без масок. Только ты, твоя история и искренние фотографии. Запись на фотосессию.">
+	<meta name="keywords"
+		content="фотограф челябинск, портретная фотосессия, женская фотосессия, фотограф настя, svobodinaphoto, честные портреты, естественная фотография">
+	<meta name="author" content="Настя Свободина">
+	<meta name="robots" content="index, follow">
+
+	<!-- Canonical URL -->
+	<link rel="canonical" href="https://promo.svobodinaphoto.ru">
+
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://promo.svobodinaphoto.ru">
+	<meta property="og:title" content="Фотосессия, в которой ты чувствуешь себя собой | Настя Свободина">
+	<meta property="og:description"
+		content="Фотограф честных портретов в Челябинске. Без глянца, без давления, без масок. Только ты, твоя история и искренние фотографии.">
+	<meta property="og:image" content="https://promo.svobodinaphoto.ru/og-image.jpg">
+	<meta property="og:image:width" content="1200">
+	<meta property="og:image:height" content="630">
+	<meta property="og:locale" content="ru_RU">
+	<meta property="og:site_name" content="Svobodina Photo">
+
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:url" content="https://promo.svobodinaphoto.ru">
+	<meta property="twitter:title" content="Фотосессия, в которой ты чувствуешь себя собой | Настя Свободина">
+	<meta property="twitter:description"
+		content="Фотограф честных портретов в Челябинске. Без глянца, без давления, без масок.">
+	<meta property="twitter:image" content="https://promo.svobodinaphoto.ru/og-image.jpg">
+
+	<!-- Telegram -->
+	<meta property="telegram:channel" content="@svobodinaphoto">
+
+	<!-- Additional Meta Tags -->
+	<meta name="theme-color" content="#f8f6f3">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+	<!-- Structured Data / JSON-LD -->
+	<script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "ProfessionalService",
+            "name": "Svobodina Photo",
+            "description": "Фотограф честных портретов",
+            "url": "https://promo.svobodinaphoto.ru",
+            "telephone": "+7-XXX-XXX-XX-XX",
+            "address": {
+                "@type": "PostalAddress",
+                "addressLocality": "Челябинск",
+                "addressRegion": "Челябинская область",
+                "addressCountry": "RU"
+            },
+            "geo": {
+                "@type": "GeoCoordinates",
+                "latitude": "55.1644",
+                "longitude": "61.4368"
+            },
+            "priceRange": "6000-11000 RUB",
+            "image": "https://promo.svobodinaphoto.ru/og-image.jpg",
+            "sameAs": [
+                "https://www.instagram.com/svobodinaphoto",
+                "https://t.me/svobodinaphoto"
+            ],
+            "founder": {
+                "@type": "Person",
+                "name": "Настя Свободина",
+                "jobTitle": "Фотограф"
+            },
+            "offers": [
+                {
+                    "@type": "Offer",
+                    "name": "Мини-сессия",
+                    "price": "6000",
+                    "priceCurrency": "RUB",
+                    "description": "1 час съёмки, 10 обработанных фото"
+                },
+                {
+                    "@type": "Offer",
+                    "name": "Полная съёмка",
+                    "price": "11000",
+                    "priceCurrency": "RUB",
+                    "description": "2-2.5 часа съёмки, 25+ фото"
+                }
+            ]
+        }
+        </script>
+
 	%sveltekit.head%
 </head>
 
